--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.yanzhenjie:permission:2.0.3'
+    implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'
 
 
 }
